welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:6: error: reassignment to val
if (a = b && b == c)
      ^greenTicket:10: error: reassignment to val
if (a = b && a != c)
      ^greenTicket:14: error: reassignment to val
if (a = c && a != b)
      ^greenTicket:18: error: reassignment to val
if (b = c && b != a)
      ^greenTicket:18: error: type mismatch;
 found   : Unit
 required: Int
if (b = c && b != a)
^